@@ -2,6 +2,7 @@ lintian-brush (0.28) UNRELEASED; urgency=medium
 
   * Add fixer for obsolete-runtime-tests-restriction.
   * Add fixer for debian-changelog-has-wrong-day-of-week.
+  * Seperately report when fixers can't preserve formatting.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 02 Sep 2019 00:23:11 +0000
 
